Change the image path.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </section>
         <section>
           <section>
-            <img src='/img/brett.png'>
+            <img src='./img/brett.png'>
             <h2>Hi, my name is Brett.</h2>
           </section>
 
@@ -69,7 +69,7 @@
           </section>
 
           <section>
-            <img src='/img/fullstack.png'>
+            <img src='./img/fullstack.png'>
             <h2>I work at FullStack.</h2>
             <h3>http://gofullstack.com</h3>
           </section>
