Expand upon Wonderful Commit Messages.
This also starts to skeleton out the rest of the content.

--- a/index.html
+++ b/index.html
@@ -98,11 +98,36 @@
           <section>
             <h2>It is code that you care about.</h2>
           </section>
+        </section>
+        <section>
+          <section>
+            <h2>Commits have a lot of value.</h2>
+          </section>
+          <section>
+            <h2>But they are often done so poorly in haste.</h2>
+          </section>
           <section>
             <h2>Your commits tell a story.</h2>
           </section>
           <section>
             <h2>They are a journal of where your code has been.</h2>
+          </section>
+          <section>
+            <h2>When you are wondering 'why the heck did I make this change?'
+              two years in the future, your commits have got your back.</h2>
+          </section>
+          <section>
+            <h2>When your company hires someone new and you are too busy in
+              meetings to help, your commits have got your back.</h2>
+          </section>
+          <section>
+            <h2>When you take on a new client with an existing codebase,
+              their commits have got your back*.</h2>
+            <p>*In this case probably not.</p>
+          </section>
+          <section>
+            <h2>When you open source your project,
+              your commits have got your back.</h2>
           </section>
         </section>
 
@@ -114,10 +139,24 @@
             <h2>They should explain the motivation surrounding what changed and why.</h2>
           </section>
           <section>
+            <h2>They should be intention revealing.</h2>
+          </section>
+        </section>
+        <section>
+          <section>
+            <h2>First and foremost, you need to add the right files to your
+              stage.</h2>
+          </section>
+          <section>
+            <h2><code>git add --all</code></h2>
+          </section>
+        </section>
+        <section>
+          <section>
             <h2>The only way to accomplish this is by writing Wonderful Commit Messages.</h2>
           </section>
           <section>
-            <h2>A wonderful commit message must follow three rules.</h2>
+            <h2>A Wonderful Commit Message must follow three rules.</h2>
           </section>
           <section>
             <h3>1. It has a concise description under 50 characters.</h3>
@@ -129,17 +168,29 @@
             <h3>3. It must be written in the present tense.</h3>
           </section>
           <section>
-            <h3>A great commit message.</h3>
-            <pre>
-              Allow developers to manage games.
-
-              Create the Game model and Games controller for handling games.
-              A game has a file that is managed through the Paperclip gem.
-              https://github.com/thoughtbot/paperclip
-            </pre>
+            <p>Prob put some stuffs here explaining the three</p>
+          </section>
+          <section> <!-- git commit -v -->
+            <h3>Have you ever done?<br/><br/><small><code>git commit -m 'Quick
+                change'</code></small></h3>
           </section>
           <section>
-            <h3>"Ugh" says the committer who uses <pre>git commit -m 'my sad commit message'</pre></h3>
+            <h2><code>git commit -m</code> is the leading cause of Lazy Commit
+              Messages.</h2>
+          </section>
+          <section>
+            <h2>Try hard not to use -m, instead use -v.</h2>
+          </section>
+          <section>
+            <h2><code>git commit -v</code></h2>
+          </section>
+        </section>
+        <section> <!-- wonderful commit message examples -->
+          <section>
+            <h2>Let's look at some wonderful commit messages.</h2>
+          </section>
+          <section>
+            <img src="./img/seth_vargo_wonderful_commit.png" />
           </section>
         </section>
 
@@ -147,6 +198,30 @@
         </section>
 
         <section> <!-- rewriting history -->
+          <section>
+            <h2>Git allows you to rewrite history to create a better
+              history.</h2>
+          </section>
+          <section>
+            <h2>You should be less concerned with maintaining a 'true' history
+              and more concerned with maintaining a 'useful' history.</h2>
+          </section>
+          <section>
+            <h2>There are three commands that I find very useful when working
+              with history.</h2>
+          </section>
+          <section>
+            <h2>1. <code>git commit --amend</code></h2>
+          </section>
+          <section>
+            <h2>1. <code>git rebase -i</code></h2>
+          </section>
+        </section>
+
+        <section> <!-- git commit amend -->
+        </section>
+
+        <section> <!-- git rebase -->
         </section>
 
         <section> <!-- reglog, bisect, git log grep, other misc. goodies  -->
