Continue fleshing out the talk content.

--- a/index.html
+++ b/index.html
@@ -184,6 +184,9 @@
           <section>
             <h2><code>git commit -v</code></h2>
           </section>
+          <section>
+            <h2>video of git commit -v goes here</h2>
+          </section>
         </section>
         <section> <!-- wonderful commit message examples -->
           <section>
@@ -207,24 +210,50 @@
               and more concerned with maintaining a 'useful' history.</h2>
           </section>
           <section>
-            <h2>There are three commands that I find very useful when working
+            <h2>There are two commands that I find indispensable when working
               with history.</h2>
           </section>
           <section>
             <h2>1. <code>git commit --amend</code></h2>
           </section>
           <section>
-            <h2>1. <code>git rebase -i</code></h2>
+            <h2>2. <code>git rebase -i</code></h2>
           </section>
         </section>
 
         <section> <!-- git commit amend -->
+          <section>
+            <h2>How many times do you make a commit but realize you forgot to
+              write the docs?</h2>
+          </section>
+          <section>
+            <h2><code>git commit --amend</code> allows you to add changes to your
+            stage and adjust your last commit.</h2>
+          </section>
+          <section>
+            <h2>video goes here of git commit ammend</h2>
+          </section>
         </section>
 
         <section> <!-- git rebase -->
+          <section>
+            <h2><code>git rebase -i</code><h2>
+          </section>
         </section>
 
-        <section> <!-- reglog, bisect, git log grep, other misc. goodies  -->
+        <section> <!-- reflog, bisect, reset, git log grep, other misc. goodies  -->
+          <section><!-- git log -->
+            <h2>Viewing Your History</h2>
+          </section>
+          <section><!-- git grep & git log grep -->
+            <h2>Searching Your History</h2>
+          </section>
+          <section><!-- git bisect -->
+            <h2>Using Your History</h2>
+          </section>
+          <section><!-- git reset -->
+            <h2>Resetting Your History</h2>
+          </section>
         </section>
 			</div>
 
