Continue fleshing out talk content.

--- a/index.html
+++ b/index.html
@@ -98,13 +98,20 @@
           <section>
             <h2>It is code that you care about.</h2>
           </section>
+          <section>
+            <h2>Let's explore how we can create and leverage our Git history to
+              the fullest.</h2>
+          </section>
         </section>
         <section>
+          <section>
+            <h2>Crafting Your History</h2>
+          </section>
           <section>
             <h2>Commits have a lot of value.</h2>
           </section>
           <section>
-            <h2>But they are often done so poorly in haste.</h2>
+            <h2>But they are often done so poorly and in haste.</h2>
           </section>
           <section>
             <h2>Your commits tell a story.</h2>
@@ -129,6 +136,46 @@
             <h2>When you open source your project,
               your commits have got your back.</h2>
           </section>
+          <section>
+            <h2>When working alone, commits are pretty important.
+          </section>
+          <section>
+            <h2>When working with a team, commits are extremely important.</h2>
+          </section>
+        </section>
+
+        <section> <!-- git add -->
+          <section>
+            <h2>First and foremost, you need to add the right files to your
+              stage.</h2>
+          </section>
+          <section>
+            <h2>Try not to use<br/><br/><code>git add --all</code></h2>
+          </section>
+          <section>
+            <h2>Do use <br/><br/><code>git add -p</code></h2>
+          </section>
+          <section>
+            <h2>It walks you through what has changed, allowing you to add or
+              skip hunks.</h2>
+          </section>
+          <section>
+            video of git add -p
+          </section>
+          <section>
+            <h2><code>git diff</code><br/><br/> shows unstaged changes</h2>
+
+            <aside class='notes'>
+              <p>git diff uses less to show changes, man less to utilize using
+              it</p>
+            </aside>
+          </section>
+          <section>
+            <h2><code>git diff --cached</code><br/><br/> shows staged changes</h2>
+          </section>
+          <section>
+            <h2>Your good friend<br/><br/><code>git status</code><br/><br/>is always helpful.</h2>
+          </section>
         </section>
 
         <section> <!-- wonderful commit messages -->
@@ -141,19 +188,8 @@
           <section>
             <h2>They should be intention revealing.</h2>
           </section>
-        </section>
-        <section>
           <section>
-            <h2>First and foremost, you need to add the right files to your
-              stage.</h2>
-          </section>
-          <section>
-            <h2><code>git add --all</code></h2>
-          </section>
-        </section>
-        <section>
-          <section>
-            <h2>The only way to accomplish this is by writing Wonderful Commit Messages.</h2>
+            <h2>The best way to accomplish this is by writing Wonderful Commit Messages.</h2>
           </section>
           <section>
             <h2>A Wonderful Commit Message must follow three rules.</h2>
@@ -167,27 +203,8 @@
           <section>
             <h3>3. It must be written in the present tense.</h3>
           </section>
-          <section>
-            <p>Prob put some stuffs here explaining the three</p>
-          </section>
-          <section> <!-- git commit -v -->
-            <h3>Have you ever done?<br/><br/><small><code>git commit -m 'Quick
-                change'</code></small></h3>
-          </section>
-          <section>
-            <h2><code>git commit -m</code> is the leading cause of Lazy Commit
-              Messages.</h2>
-          </section>
-          <section>
-            <h2>Try hard not to use -m, instead use -v.</h2>
-          </section>
-          <section>
-            <h2><code>git commit -v</code></h2>
-          </section>
-          <section>
-            <h2>video of git commit -v goes here</h2>
-          </section>
         </section>
+
         <section> <!-- wonderful commit message examples -->
           <section>
             <h2>Let's look at some wonderful commit messages.</h2>
@@ -197,7 +214,25 @@
           </section>
         </section>
 
-        <section> <!-- three types of commits -->
+        <section> <!-- git commit -->
+          <section> <!-- git commit -v -->
+            <h2>Have you ever done?<br/><br/><small><code>git commit -m 'Quick
+                change'</code></small></h2>
+          </section>
+          <section>
+            <h2><code>git commit -m</code> is the leading cause of Lazy Commit
+              Messages.</h2>
+          </section>
+          <section>
+            <h2>Try hard not to use -m, instead use -v.</h2>
+          </section>
+          <section>
+            <h2><code>git commit -v</code> opens your default git editor
+            for writing a wonderful commit.</h2>
+          </section>
+          <section>
+            <h2>video of git commit -v goes here</h2>
+          </section>
         </section>
 
         <section> <!-- rewriting history -->
@@ -241,18 +276,28 @@
           </section>
         </section>
 
-        <section> <!-- reflog, bisect, reset, git log grep, other misc. goodies  -->
-          <section><!-- git log -->
-            <h2>Viewing Your History</h2>
+        <section><!-- git log -->
+          <h2>Viewing Your History</h2>
+        </section>
+
+        <section><!-- git grep & git log grep -->
+          <h2>Searching Your History</h2>
+        </section>
+
+        <section><!-- git reset -->
+          <h2>Resetting Your History</h2>
+        </section>
+
+        <section><!-- wrapping up -->
+          <section>
+            <img src='./img/thats_all_folks.gif'>
           </section>
-          <section><!-- git grep & git log grep -->
-            <h2>Searching Your History</h2>
+          <section>
+            <img src='./img/brett.png'>
+            <h2>My name is Brett.<br/>Let's get a beer!</h2>
           </section>
-          <section><!-- git bisect -->
-            <h2>Using Your History</h2>
-          </section>
-          <section><!-- git reset -->
-            <h2>Resetting Your History</h2>
+          <section>
+            <h2>Thank you!</h2>
           </section>
         </section>
 			</div>
