Continue to work on the content and add demos.

--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
               skip hunks.</h2>
           </section>
           <section>
-            video of git add -p
+            <iframe src="http://showterm.io/c824448d61f816e606072#stop"
+              width="640" height="480"></iframe>
           </section>
           <section>
             <h2><code>git diff</code><br/><br/> shows unstaged changes</h2>
@@ -172,6 +173,10 @@
           </section>
           <section>
             <h2><code>git diff --cached</code><br/><br/> shows staged changes</h2>
+          </section>
+          <section>
+            <iframe src="http://showterm.io/4cf196f070836311ba2ac#stop"
+              width="640" height="480"></iframe>
           </section>
           <section>
             <h2>Your good friend<br/><br/><code>git status</code><br/><br/>is always helpful.</h2>
@@ -212,6 +217,9 @@
           <section>
             <img src="./img/seth_vargo_wonderful_commit.png" />
           </section>
+          <section>
+            <img src="./img/pete_brown_wonderful_commit.png" />
+          </section>
         </section>
 
         <section> <!-- git commit -->
@@ -231,7 +239,23 @@
             for writing a wonderful commit.</h2>
           </section>
           <section>
-            <h2>video of git commit -v goes here</h2>
+            <iframe src="http://showterm.io/830be1dc1c26c20f1c1ac#stop"
+              width="720" height="480"></iframe>
+          </section>
+        </section>
+
+        <section> <!-- the three types of commits -->
+          <section>
+            <h2>There are three types of commits.</h2>
+          </section>
+          <section>
+            <h2>1. Progress commits</h2>
+          </section>
+          <section>
+            <h2>2. Anchor commits</h2>
+          </section>
+          <section>
+            <h2>3. Merge commits</h2>
           </section>
         </section>
 
@@ -266,7 +290,8 @@
             stage and adjust your last commit.</h2>
           </section>
           <section>
-            <h2>video goes here of git commit ammend</h2>
+            <iframe src="http://showterm.io/7ae22f30604fa155d6572#stop"
+              width="720" height="480"></iframe>
           </section>
         </section>
 
