Implement Brian's feedback.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,10 @@
             <h2>Commits have a lot of value.</h2>
           </section>
           <section>
-            <h2>But they are often done so poorly and in haste.</h2>
+            <h2>But they are so easy to do hastily.</h2>
+          </section>
+          <section>
+            show some of my bad commits
           </section>
           <section>
             <h2>Your commits tell a story.</h2>
@@ -185,7 +188,13 @@
 
         <section> <!-- wonderful commit messages -->
           <section>
-            <h2>Your commits are the most important documentation in your project.</h2>
+            <h2>Your commits are important documentation.</h2>
+          </section>
+          <section>
+            <h2>Treat your commits like they matter as much as your tests.</h2>
+          </section>
+          <section>
+            show how they save your butt
           </section>
           <section>
             <h2>They should explain the motivation surrounding what changed and why.</h2>
@@ -220,6 +229,9 @@
           <section>
             <img src="./img/pete_brown_wonderful_commit.png" />
           </section>
+          <section>
+            <img src="./img/josh_and_brian.png" />
+          </section>
         </section>
 
         <section> <!-- git commit -->
@@ -250,6 +262,16 @@
           </section>
           <section>
             <h2>1. Progress commits</h2>
+          </section>
+          <section>
+            <h2>Progress commits show how devs are progressing through their
+              feature.</h2>
+          </section>
+          <section>
+            <img src='./img/progress_commits.png'>
+          </section>
+          <section>
+            <h2>Progress commits get squashed down into...</h2>
           </section>
           <section>
             <h2>2. Anchor commits</h2>
