Keep fleshing out content! AWYEAH!

--- a/index.html
+++ b/index.html
@@ -74,7 +74,27 @@
             <h3>http://gofullstack.com</h3>
           </section>
           <section>
-            <h3>I am really excited to be here.<br>I love Git, and I cannot imagine working without it.</p>
+            <h2>I am really excited to be here.</h2>
+          </section>
+          <section>
+            <h2>I cannot imagine working without Git.</h2>
+          </section>
+          <section>
+            <h2>It is a tool most of us use on a daily basis.</h2>
+          </section>
+          <section>
+            <h2>How often do we think about it besides when we are fighting
+              it?</h2>
+
+            <aside class='notes'>
+              <p>merge conflicts, amirite?</p>
+            </aside>
+          </section>
+          <section>
+            <h2>I think Git is something we should think about more often.
+          </section>
+          <section>
+            <h2>Here is why!</h2>
           </section>
         </section>
 
@@ -114,7 +134,13 @@
             <h2>But they are so easy to do hastily.</h2>
           </section>
           <section>
-            show some of my bad commits
+            <img src="./img/tomdoc.png" />
+          </section>
+          <section>
+            <img src="./img/update.png" />
+          </section>
+          <section>
+            <img src="./img/kind-of-sort-of-working.png" />
           </section>
           <section>
             <h2>Your commits tell a story.</h2>
@@ -141,9 +167,18 @@
           </section>
           <section>
             <h2>When working alone, commits are pretty important.
+
+            <aside class='notes'>
+              <p>IDK about you, but I have the _worst_ memory.</p>
+            </aside>
           </section>
           <section>
             <h2>When working with a team, commits are extremely important.</h2>
+
+            <aside class='notes'>
+              <p>It is important to think of the future when writing
+              history.</p>
+            </aside>
           </section>
         </section>
 
@@ -194,19 +229,19 @@
             <h2>Treat your commits like they matter as much as your tests.</h2>
           </section>
           <section>
-            show how they save your butt
-          </section>
-          <section>
             <h2>They should explain the motivation surrounding what changed and why.</h2>
           </section>
           <section>
             <h2>They should be intention revealing.</h2>
           </section>
           <section>
+            <img src="./img/seth_vargo_login.png" />
+          </section>
+          <section>
             <h2>The best way to accomplish this is by writing Wonderful Commit Messages.</h2>
           </section>
           <section>
-            <h2>A Wonderful Commit Message must follow three rules.</h2>
+            <h2>A Wonderful Commit Message follows three rules.</h2>
           </section>
           <section>
             <h3>1. It has a concise description under 50 characters.</h3>
@@ -216,6 +251,12 @@
           </section>
           <section>
             <h3>3. It must be written in the present tense.</h3>
+            <aside class='notes'>
+              <p>Think about your future self reading it!</p>
+            </aside>
+          </section>
+          <section>
+            <img src="./img/git_commit.png" />
           </section>
         </section>
 
