CAN'T STOP WON'T STOP

--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
             <img src="./img/kind-of-sort-of-working.png" />
           </section>
           <section>
+            <img src="./img/fuck.png" />
+          </section>
+          <section>
             <h2>Your commits tell a story.</h2>
           </section>
           <section>
@@ -318,7 +321,20 @@
             <h2>2. Anchor commits</h2>
           </section>
           <section>
+            <h2>Anchor commits should be Wonderful Commits.</h2>
+          </section>
+          <section>
+            <img src='./img/revise_cookbooks_ui.png'>
+          </section>
+          <section>
             <h2>3. Merge commits</h2>
+          </section>
+          <section>
+            <h2>Merge commits show the story of when branches got merged
+              in.</h2>
+          </section>
+          <section>
+            <img src='./img/merge_commit.png'>
           </section>
         </section>
 
@@ -328,8 +344,8 @@
               history.</h2>
           </section>
           <section>
-            <h2>You should be less concerned with maintaining a 'true' history
-              and more concerned with maintaining a 'useful' history.</h2>
+            <h3>You should be less concerned with maintaining a 'true' history
+              and more concerned with creating a 'useful' history.</h3>
           </section>
           <section>
             <h2>There are two commands that I find indispensable when working
@@ -347,6 +363,10 @@
           <section>
             <h2>How many times do you make a commit but realize you forgot to
               write the docs?</h2>
+          </section>
+          <section>
+            <h2>How many times do you make a commit but realize you forgot to
+              add that one file?</h2>
           </section>
           <section>
             <h2><code>git commit --amend</code> allows you to add changes to your
