Restructure the last section.

--- a/index.html
+++ b/index.html
@@ -308,8 +308,17 @@
             <h2>1. Progress commits</h2>
           </section>
           <section>
-            <h2>Progress commits show how devs are progressing through their
+            <h2>Progress commits show how devs are working through their
               feature.</h2>
+          </section>
+          <section>
+            <h2>Progress commits should be granular and specific.</h2>
+          </section>
+          <section>
+            <h2>Do not make sweeping progress commits.</h2>
+          </section>
+          <section>
+            <h2>It is much easier to squash commits than to split them.</h2>
           </section>
           <section>
             <img src='./img/progress_commits.png'>
@@ -322,6 +331,12 @@
           </section>
           <section>
             <h2>Anchor commits should be Wonderful Commits.</h2>
+          </section>
+          <section>
+            <h2>They are the commits that will be merged into master.</h2>
+          </section>
+          <section>
+            <h2>They are set in stone.</h2>
           </section>
           <section>
             <img src='./img/revise_cookbooks_ui.png'>
@@ -382,21 +397,24 @@
           <section>
             <h2><code>git rebase -i</code><h2>
           </section>
-        </section>
-
-        <section><!-- git log -->
-          <h2>Viewing Your History</h2>
-        </section>
-
-        <section><!-- git grep & git log grep -->
-          <h2>Searching Your History</h2>
-        </section>
-
-        <section><!-- git reset -->
-          <h2>Resetting Your History</h2>
+          <section>
+          </section>
         </section>
 
         <section><!-- wrapping up -->
+          <section>
+            <h2>There is alot to Git. Here are some fun topics to dig deeper
+              into:</h2>
+          </section>
+          <section>
+            <h2>Viewing Your History</h2>
+          </section>
+          <section>
+            <h2>Searching Your History</h2>
+          </section>
+          <section>
+            <h2>Resetting Your History</h2>
+          </section>
           <section>
             <img src='./img/thats_all_folks.gif'>
           </section>
