Expand upon git rebase.

--- a/index.html
+++ b/index.html
@@ -395,9 +395,48 @@
 
         <section> <!-- git rebase -->
           <section>
+            <h2>Do not fear the rebase.</h2>
+          </section>
+          <section>
+            <h2>Embrace the rebase.</h2>
+          </section>
+          <section>
+            <h2><code>git rebase --abort</code><h2>
+          </section>
+          <section>
+            <h2>Abort quits out of the rebase, sending you back to before the
+              rebase.</h2>
+          </section>
+          <section>
+            <h3><code>git rebase origin/master</code></h3>
+          </section>
+          <section>
+            <h2>Fix those conflicts and do not look back.</h2>
+          </section>
+          <section>
+            <h3>When you are ready to squash your progress commits into anchor
+              commits, look no further than...</h3>
+          </section>
+          <section>
             <h2><code>git rebase -i</code><h2>
           </section>
           <section>
+            <iframe src="http://showterm.io/0640b5959cb6faaa415c9#stop"
+              width="720" height="580"></iframe>
+          </section>
+          <section>
+            <h2>It is easier to squash commits than to separate
+              commits.</h2>
+          </section>
+          <section>
+            <h2>It is possible to edit and separate commits, but you may find
+              yourself asking if it is worth the hassle.</h2>
+          </section>
+          <section>
+            <h2>Take your time with rebase and read the docs as you go.</h2>
+          </section>
+          <section>
+            <h2>Rebase with a pair if you can!</h2>
           </section>
         </section>
 
