CLEAN IT UP. SHUT IT DOWN.

--- a/index.html
+++ b/index.html
@@ -201,6 +201,12 @@
               skip hunks.</h2>
           </section>
           <section>
+            <img src="./img/git_add_1.png" />
+          </section>
+          <section>
+            <img src="./img/git_add_2.png" />
+          </section>
+          <section>
             <iframe src="http://showterm.io/c824448d61f816e606072#stop"
               width="640" height="480"></iframe>
           </section>
@@ -253,7 +259,7 @@
             <h3>2. It has a summary that describes what changed and why.</h3>
           </section>
           <section>
-            <h3>3. It must be written in the present tense.</h3>
+            <h3>3. It is written in the present tense.</h3>
             <aside class='notes'>
               <p>Think about your future self reading it!</p>
             </aside>
@@ -316,6 +322,9 @@
           </section>
           <section>
             <h2>Do not make sweeping progress commits.</h2>
+          </section>
+          <section>
+            <h2>Make your progress commits early and often.</h2>
           </section>
           <section>
             <h2>It is much easier to squash commits than to split them.</h2>
@@ -419,6 +428,18 @@
           </section>
           <section>
             <h2><code>git rebase -i</code><h2>
+          </section>
+          <section>
+            <h3><code>git rebase -i HEAD~4</code><h3>
+          </section>
+          <section>
+            <img src='./img/git_rebase_1.png'>
+          </section>
+          <section>
+            <img src='./img/git_rebase_2.png'>
+          </section>
+          <section>
+            <img src='./img/git_rebase_3.png'>
           </section>
           <section>
             <iframe src="http://showterm.io/0640b5959cb6faaa415c9#stop"
