REBASE -i ORIGIN MASTER DUH

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             <h2><code>git rebase -i</code><h2>
           </section>
           <section>
-            <h3><code>git rebase -i HEAD~4</code><h3>
+            <h3><code>git rebase -i origin/master</code><h3>
           </section>
           <section>
             <img src='./img/git_rebase_1.png'>
